--- a/surprise.html
+++ b/surprise.html
@@ -26,7 +26,7 @@
     <a href="https://open.spotify.com/playlist/37i9dQZF1EJLCE4K5gSAqB?si=4017f543831b446f" class="button">Listen to Our Playlist!</a>
 
     <!-- Centered Round Image -->
-    <img src="images/your-image.jpg" alt="Special Image" class="profile-image">
+    <img src="your-image.jpg" alt="Special Image" class="profile-image">
   </div>
 
   <!-- Random Character Pop-Up -->
