--- a/fun.html
+++ b/fun.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1>Take a Break, Champ!</h1>
     <div class="meme">
-      <img src="images/meme.jpg" alt="JJK Meme" class="rotate" width="20%" height="20%" style="border-radius: 50%;">
+      <img src="https://github.com/user-attachments/assets/79b377e6-59a0-4317-8fdf-d6cf615650c5" alt="JJK Meme" class="rotate" width="20%" height="20%" style="border-radius: 50%;">
     </div>
 
     <!-- Scrollable Game Area -->
